# pisdwriter

./: .gitignore  LICENCE  PiSDWriter.service  README.md  docker-compose.yml  dockerfile  setup.cfg
src/PiSDWriter/: global_vars.py  jinja2_writter.py  main.py  notification.py  system.py
src/PiSDWriter/configs/: main.yml  main.yml.template  settings.json.template  wifi.yml.template
src/PiSDWriter/templates/: pisdwriter.service.j2
templates/: network-config.j2  user-data.j2
vars/: main.yml
