[metadata]
name = PiSDWriter
version = 0.0.1
description = write RaspberryPi SD easiry
license='MIT'

[options]
install_requires =
    jinja2
    pyyaml
    requests
    tqdm
    pyudev
packages = find:
package_dir=
    =src
include_package_data=True
zip_safe = False

[options.packages.find]
where=src

# [options.entry_points]
# console_scripts =
#   PiSDWriter = PiSDWriter.main:main