[metadata]
name = PiSDWriter
version = 0.0.1
description = write RaspberryPi SD easiry
license='MIT'

[options]
install_requires =
    jinja2
    pyyaml
    requests
    tqdm
    pyudev
packages = find:
package_dir=
    =src
zip_safe = False

[options.package_data]
PiSDWriter = 
    configs/*.template
    templates/*

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  pisdwriter = PiSDWriter.main:main